Cập nhật link logo

--- a/src/templates/emails/otpEmailTemplate.handlebars
+++ b/src/templates/emails/otpEmailTemplate.handlebars
@@ -62,8 +62,8 @@
 <div class="container">
     <div class="header">
         <!-- Thêm logo công ty tại đây -->
-        <img src="https://ibb.co/ZzhfQ5h" alt="SmartNet Solutions">
-    </div>
+        <a href="https://ibb.co/ZzhfQ5h"><img src="https://i.ibb.co/zVSm3pS/2.png" alt="2" border="0"></a>
+         </div>
     <div class="content">
         <h2>Xác Thực Tài Khoản của Bạn</h2>
         <p>Chào bạn,</p>
